<resources>
    <string name="client_id">883232123186-c2e9oo44jmun3ve59t7j8ub8nb5cgqns.apps.googleusercontent.com</string>
    <string name="app_name">MyPetApp</string>
    <string name="my_pet_app">PetCarePlus 🐈</string>
    <string name="my_pets">My Pets</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="schedule_vet">Schedule Vet</string>
    <string name="add_new_pet">Add New Pet</string>
    <string name="add_your_pet_details_here">Add your pet details here</string>
    <string name="add_your_pet_species">Pet Specie</string>
    <string name="your_pet_age">Your pet age</string>
    <string name="select_the_gender">Select the gender</string>
    <string name="select_gender_male">Male</string>
    <string name="select_gender_female">Female</string>
    <string name="your_pet_weight">Your pet weight</string>
    <string name="add_pet_owener_name">Owner name</string>
    <string name="add_pet_breed">Breed</string>
    <string name="add_pet_name">Pet Name</string>
    <string name="add_pet_chip_title">Has your pet a microchip?</string>
    <string name="add_pet_chip_yes">Yes</string>
    <string name="add_pet_chip_no">No</string>
    <string name="add_pet_vacc_title">Has your pet the annual vaccination?</string>
    <string name="add_pet_vacc_yes">Yes</string>
    <string name="add_pet_vacc_no">No</string>
    <string name="add_pet_notes">Leave your notes here</string>
    <string name="add_invalid_owner_name">Invalid owner name</string>
    <string name="add_invalid_breed_name">Invalid breed</string>
    <string name="add_invalid_age">Invalid age</string>
    <string name="add_invalid_weight">Invalid weight</string>
    <string name="save">Save</string>
    <string name="tiet_consultation_s_hour">Appointment\'s hour</string>
    <string name="tv_select_a_date_for_your_appointment">Choose a date:</string>
    <string name="tiet_appointment_reason">Appointment reason</string>
    <string name="tv_choose_the_animal">Choose the animal:</string>
    <string name="img_petcareplus_logo">PetCarePlus logo</string>
    <string name="tv_animal_s_picture">Animal\'s picture:</string>
    <string name="appointment_take_photo">Take Photo</string>
    <string name="bttn_save">Save</string>
    <string name="tv_choose_the_doctor">Choose the doctor:</string>
    <string name="taken_picture_appointment">Taken picture</string>
    <string name="lastname">lastname</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="city">City</string>
    <string name="saveAccount">Save</string>
    <string name="choose_your_city">Choose your city:</string>
    <string name="new_pet_added">New pet added successfully!</string>
    <string name="welcome_back">"Welcome back, "</string>
    <string name="appointment_scheduled">Appointment scheduled successfully!</string>
    <string name="pet_created">"Pet Created: "</string>
    <string name="error_emptyFirstName">Please enter your first name</string>
    <string name="error_firstNameLength">First name should be at least 2 characters</string>
    <string name="error_firstNameChar">First name should contain only letters</string>
    <string name="error_emptyLastName">Please enter your last name</string>
    <string name="error_lastNameChar">Last name should contain only letters</string>
    <string name="error_lastNameLength">Last name should be at least 2 characters</string>
    <string name="error_emptyPhone">Please enter your phone number</string>
    <string name="error_invalidPhone">Please enter a valid phone number (07xxxxxxxx)</string>
    <string name="error_city">Please select a city</string>
    <string name="photo_captured">Photo captured successfully</string>
    <string name="photo_cancelled">Photo capture cancelled</string>
    <string name="camera_not_available">Camera not available</string>
    <string name="error_pet">Please select a pet</string>
    <string name="error_noDoctor">Please select a doctor</string>
    <string name="error_emptyReason">Please enter a reason for the appointment</string>
    <string name="error_reasonLength">Please enter a more detailed reason for the appointment</string>
    <string name="error_futureDate">Please select a future date and time</string>
    <string name="error_weekDays">Appointments are only available on weekdays</string>
    <string name="error_appAfter9">Appointments are only available from 9 AM</string>
    <string name="error_appBefore17">Appointments are only available until 5 PM</string>
    <string name="error_lastApp16">Last appointment must start at 4:00 PM</string>
    <string name="error_appAdvance">Appointments must be scheduled at least 1 hour in advance</string>
    <string name="set_your_account_information">Set your account information</string>
    <string name="about_our_app">About our app</string>
    <string name="First_About_Paragraph">We\'re glad you\'ve chosen the PetCarePlus app – your trusted assistant for quick and easy veterinary appointments! Whether you need a routine check-up, vaccinations, or medical advice for your pet, our app is here to simplify the entire process. We created this app with love for animals and respect for your time. We hope it becomes a tool that helps you care for the health of those who make your days brighter.</string>
    <string name="quick_and_easy_use">Quick and easy use</string>
    <string name="Second_About_Paragraph">Our app is really intuitive and easy to use. First, you need to set up your profile so that clinics can easily contact you after you made the appointment. Then, add all your pets to ensure each one gets the care they need. Finally, using the \'Schedule Vet\' button, select your preferred date and time to book a visit to the vet with your furry friend.</string>
    <string name="Numar_telefon">0700100800</string>
    <string name="contact_us_here">Contact us here</string>
    <string name="select_your_pet_specie">Select your pet specie</string>
    <string name="paw_logo">Paw logo</string>
    <string name="vet_picture">Vet picture</string>
    <string name="phomne_logo">Phomne logo</string>
    <string name="paw_icon">Paw icon</string>
    <string-array name="add_pet_species">
        <item>Dog</item>
        <item>Cat</item>
        <item>Bird</item>
        <item>Rabbit</item>
        <item>Hamster</item>
        <item>Fish</item>
        <item>Turtle</item>
    </string-array>
    <string-array name="add_appointment_doctor">
        <item>Dr. Aurelian Dragos</item>
        <item>Dr. Anton Ciobanu</item>
        <item>Dr. Alecu Albu</item>
        <item>Dr. Daria Pavel</item>
        <item>Dr. Iulia Tunaru</item>
    </string-array>

    <string-array name="add_city">
        <item>Alba Iulia</item>
        <item>Arad</item>
        <item>Bacau</item>
        <item>Baia Mare</item>
        <item>Botosani</item>
        <item>Braila</item>
        <item>Brasov</item>
        <item>Bucuresti</item>
        <item>Buzau</item>
        <item>Cluj-Napoca</item>
        <item>Constanta</item>
        <item>Craiova</item>
        <item>Deva</item>
        <item>Drobeta-Turnu Severin</item>
        <item>Focsani</item>
        <item>Galati</item>
        <item>Iasi</item>
        <item>Oradea</item>
        <item>Piatra Neamt</item>
        <item>Pitesti</item>
        <item>Ploiesti</item>
        <item>Ramnicu Valcea</item>
        <item>Satu Mare</item>
        <item>Sibiu</item>
        <item>Slatina</item>
        <item>Suceava</item>
        <item>Targu Jiu</item>
        <item>Targu Mures</item>
        <item>Timisoara</item>
        <item>Tulcea</item>
    </string-array>
</resources>