<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutAppActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/stoica_alexandra_textDespreNoi"
            style="@style/AppTextViewStyle.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:text="@string/about_our_app"
            android:textColorLink="#090303"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stoica_alexandra_introductionText"
        style="@style/AppTextViewStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/First_About_Paragraph"
        android:textAlignment="center"
        android:textDirection="firstStrongLtr"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stoica_alexandra_textDespreNoi" />

        <TextView
            android:id="@+id/stoica_alexandra_subtitluFunctionalitatiTextView"
            style="@style/AppTextViewStyle.SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/quick_and_easy_use"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stoica_alexandra_iconitaPAW" />

        <TextView
            android:id="@+id/stoica_alexandra_functionalitatiTextView"
            style="@style/AppTextViewStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/Second_About_Paragraph"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/stoica_alexandra_subtitluFunctionalitatiTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="274dp"
            tools:layout_editor_absoluteY="411dp" />

        <ImageView
            android:id="@+id/stoica_alexandra_iconitaPAW"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/paw_icon"
            app:tint="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/stoica_alexandra_subtitluFunctionalitatiTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stoica_alexandra_introductionText"
            app:srcCompat="@drawable/baseline_pets_24" />

        <TextView
            android:id="@+id/stoica_alexandra_contactTextView"
            style="@style/AppTextViewStyle.SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/contact_us_here"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/stoica_alexandra_veterinariImg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="175dp"
            tools:layout_editor_absoluteY="659dp" />

        <ImageView
            android:id="@+id/stoica_alexandra_veterinariImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/vet_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stoica_alexandra_functionalitatiTextView"
            app:srcCompat="@drawable/veterinari_img"
            tools:layout_editor_absoluteX="137dp"
            tools:layout_editor_absoluteY="841dp" />

        <TextView
            android:id="@+id/stoica_alexandra_telefonTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Numar_telefon"
            style="@style/AppTextViewStyle"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/stoica_alexandra_contactTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="30dp"
            tools:layout_editor_absoluteX="190dp"
            tools:layout_editor_absoluteY="1633dp" />

        <ImageView
            android:id="@+id/stoica_alexandra_phoneIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/phomne_logo"
            app:layout_constraintTop_toBottomOf="@+id/stoica_alexandra_contactTextView"
            app:layout_constraintEnd_toStartOf="@+id/stoica_alexandra_telefonTextView"
            app:srcCompat="@drawable/baseline_phone_24"
            tools:layout_editor_absoluteX="143dp"
            tools:layout_editor_absoluteY="1526dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>