<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPet">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"

        android:id="@+id/timofte_serban_add_pet_icon"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:src="@drawable/baseline_pets_24"

        android:layout_margin="12dp"
        android:background="#0000FF"
        />§

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timofte_serban_add_pet_title"
        app:layout_constraintTop_toBottomOf="@id/timofte_serban_add_pet_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/add_your_pet_details_here"
        android:textSize="24dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="12dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timofte_serban_add_pet_ti_owner_name"
        app:layout_constraintTop_toBottomOf="@id/timofte_serban_add_pet_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_pet_owener_name"
            android:id="@+id/timofte_serban_add_pet_tiet_owner_name"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timofte_serban_add_pet_ti_owner_pet_name"
        app:layout_constraintTop_toBottomOf="@id/timofte_serban_add_pet_ti_owner_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_pet_name"
            android:id="@+id/timofte_serban_add_pet_tiet_owner_pet_name"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/timofte_serban_add_pet_tv_specie_name"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timofte_serban_add_pet_ti_owner_pet_name"

        android:text="Select your pet specie"

        android:textSize="18dp"
        android:layout_margin="12dp"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timofte_serban_add_pet_spinner_species"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/timofte_serban_add_pet_tv_specie_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:entries="@array/add_pet_species"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timofte_serban_add_pet_ti_breed"
        app:layout_constraintTop_toBottomOf="@id/timofte_serban_add_pet_spinner_species"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_pet_breed"
            android:id="@+id/timofte_serban_add_pet_tiet_breed"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timofte_serban_add_pet_ti_age"
        app:layout_constraintTop_toBottomOf="@id/timofte_serban_add_pet_ti_breed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_pet_age"
            android:id="@+id/timofte_serban_add_pet_tiet_age"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timofte_serban_add_pet_gender"
        app:layout_constraintTop_toBottomOf="@id/timofte_serban_add_pet_ti_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/select_the_gender"
        android:textSize="18dp"
        android:layout_margin="12dp"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timofte_serban_add_pet_radGroup_gender"

        app:layout_constraintTop_toBottomOf="@id/timofte_serban_add_pet_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_margin="8dp"

        android:orientation="horizontal"
        android:weightSum="2"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timofte_serban_add_pet_radBtn_male"

            android:text="@string/select_gender_male"

            android:layout_weight="1"

            android:checked="true"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timofte_serban_add_pet_radBtn_female"

            android:text="@string/select_gender_female"

            android:layout_weight="1"
            />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timofte_serban_add_pet_ti_weight"
        app:layout_constraintTop_toBottomOf="@id/timofte_serban_add_pet_radGroup_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_pet_weight"
            android:id="@+id/timofte_serban_add_pet_tiet_weight"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timofte_serban_add_pet_chip"
        app:layout_constraintTop_toBottomOf="@id/timofte_serban_add_pet_ti_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/add_pet_chip_title"
        android:textSize="18dp"
        android:layout_margin="12dp"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timofte_serban_add_pet_radGroup_chip"

        app:layout_constraintTop_toBottomOf="@id/timofte_serban_add_pet_chip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_margin="8dp"

        android:orientation="horizontal"
        android:weightSum="2"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timofte_serban_add_pet_radBtn_chip_yes"

            android:text="@string/add_pet_chip_yes"

            android:layout_weight="1"

            android:checked="true"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timofte_serban_add_pet_radBtn_chip_no"

            android:text="@string/add_pet_chip_no"

            android:layout_weight="1"
            />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timofte_serban_add_pet_vacc"
        app:layout_constraintTop_toBottomOf="@id/timofte_serban_add_pet_radGroup_chip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/add_pet_chip_title"
        android:textSize="18dp"
        android:layout_margin="12dp"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timofte_serban_add_pet_radGroup_vacc"

        app:layout_constraintTop_toBottomOf="@id/timofte_serban_add_pet_vacc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_margin="8dp"

        android:orientation="horizontal"
        android:weightSum="2"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timofte_serban_add_pet_radBtn_vacc_yes"

            android:text="@string/add_pet_vacc_yes"

            android:layout_weight="1"

            android:checked="true"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timofte_serban_add_pet_radBtn_vacc_no"

            android:text="@string/add_pet_vacc_no"

            android:layout_weight="1"
            />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/timofte_serban_add_pet_btn_save"

        app:layout_constraintTop_toBottomOf="@id/timofte_serban_add_pet_radGroup_vacc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"

        android:text="Save"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>