<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/home_tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/my_pet_app"
        style="@style/AppTextViewStyle.Header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_tv_pets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/my_pets"
        style="@style/AppTextViewStyle.SectionHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_tv_header" />

    <ListView
        android:id="@+id/home_lv_pets"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        style="@style/AppListViewStyle"
        app:layout_constraintBottom_toTopOf="@id/home_tv_appointments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_tv_pets" />

    <TextView
        android:id="@+id/home_tv_appointments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_appointments"
        style="@style/AppTextViewStyle.SectionHeader"
        app:layout_constraintBottom_toTopOf="@id/home_lv_appointments"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/home_lv_appointments"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        style="@style/AppListViewStyle"
        app:layout_constraintBottom_toTopOf="@id/home_layout_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.3" />

    <LinearLayout
        android:id="@+id/home_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/home_btn_add_pet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:padding="12dp"
            android:text="@string/add_new_pet"
            app:icon="@android:drawable/ic_input_add"
            style="@style/AppButtonStyle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/home_btn_schedule_vet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:padding="12dp"
            android:text="@string/schedule_vet"
            app:icon="@android:drawable/ic_menu_my_calendar"
            style="@style/AppButtonStyle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>