<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/serban_andrei_main_btn_about"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        app:icon="@drawable/baseline_pets_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="@id/serban_andrei_main_tv_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/serban_andrei_main_tv_header" />

    <TextView
        android:id="@+id/serban_andrei_main_tv_header"
        style="@style/AppTextViewStyle.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/my_pet_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/serban_andrei_main_btn_profile"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        app:icon="@drawable/baseline_account_box_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="@id/serban_andrei_main_tv_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/serban_andrei_main_tv_header" />

    <TextView
        android:id="@+id/serban_andrei_main_tv_pets"
        style="@style/AppTextViewStyle.SectionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/my_pets"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serban_andrei_main_tv_header" />

    <ListView
        android:id="@+id/serban_andrei_main_lv_pets"
        style="@style/AppListViewStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/serban_andrei_main_tv_appointments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serban_andrei_main_tv_pets" />

    <TextView
        android:id="@+id/serban_andrei_main_tv_appointments"
        style="@style/AppTextViewStyle.SectionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_appointments"
        app:layout_constraintBottom_toTopOf="@id/serban_andrei_main_lv_appointments"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/serban_andrei_main_lv_appointments"
        style="@style/AppListViewStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/serban_andrei_main_layout_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/serban_andrei_main_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/serban_andrei_main_btn_add_pet"
            style="@style/AppButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/add_new_pet"
            app:icon="@android:drawable/ic_input_add" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/serban_andrei_main_btn_schedule_vet"
            style="@style/AppButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/schedule_vet"
            app:icon="@android:drawable/ic_menu_my_calendar" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>